--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+.end-call-button {
+  z-index: 9999;
+}
 
 @theme inline {
   --color-background: var(--background);
